[package]
name = "image-transitions"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A library to create image transitions on GPU"
include = ["ptx/*", "src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust = "0.3.2"
thiserror = "1.0.31"

[build-dependencies]
cuda_builder = "0.3.0"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"

[[bench]]
name = "crossfade"
harness = false
